Fixed App can not centered in certain resolution

--- a/css/index.css
+++ b/css/index.css
@@ -824,6 +824,7 @@ a {
     #app-can {
         position: static;
         max-width: 100%;
+        margin: 0 auto;
     }
 
     #sketches {
